--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "connect": "^3.2.0",
     "js-yaml": "^3.3.0",
     "swagger-tools": "0.10.1",
-    "commander": "2.15.1"
+    "commander": "2.15.1",
+    "lodash": "^4.17.5",
   }
 }
