--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
     "js-yaml": "^3.3.0",
     "swagger-tools": "0.10.1",
     "commander": "2.15.1",
-    "lodash": "^4.17.5",
+    "lodash": "^4.17.5"
   }
 }
